Changes for conf defaults and cleanup

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -5,14 +5,8 @@
   <head>
     <meta charset="utf-8">
     <title>Rights statements</title>
-
   </head>
   <body>
-
-
-    <h2>Europeana &mdash; Rights statements </h2>
-
-
-
+    <h2>Rights statements</h2>
   </body>
 </html>
